# employee-management-BE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
api/common/: datetime_utils.py  exceptions.py  jwt.py  models.py  pagination.py  responses.py  serializers.py  whitelist.py
api/employee/: apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
api/employee/migrations/: 0001_initial.py  0002_alter_employee_designation_alter_employee_team.py
config/: health.py  settings.py  urls.py
